docs/version-1.8.0/modules/en/pages/nodes/node-conditions.adoc
= Node Conditions
:current-version: {page-component-version}

Node conditions describe the status of all worker nodes and are used to check the environment settings of worker nodes to identify potential issues before any system impact.

Node conditions:

* `Ready`: Indicates that the node is ready for Longhorn operations, including that a `longhorn-manager` pod is running on this node, the Kubernetes node is ready, and there is no physical resources pressure.
+
* `Schedulable`: Indicates that the node is not cordoned and workload can be scheduled to this node.
+
* `MountPropagation`: Indicates that the node supports mount propagation. This is necessary for sharing of volumes mounted by a container with other containers in the same Longhorn pod, or to other Longhorn pods on the same node.
+ 
* `Multipathd`: Checks if the `multipathd` service is not running on the node, which may affect the pod with the volume startup. See link:https://longhorn.io/kb/troubleshooting-volume-with-multipath/[Troubleshooting: `MountVolume.SetUp failed for volume` due to multipathd on the node].
* `RequiredPackages`: Checks if all required packages (xref:installation-setup/requirements.adoc#_installing_nfsv4_client[NFS client], xref:installation-setup/requirements.adoc#_installing_open-_scsi[iSCSI tool], xref:installation-setup/requirements.adoc#_installing_cryptsetup_and_luks[cryptsetup], xref:installation-setup/requirements.adoc#_installing_device_mapper_userspace_tool[dmsetup]) exist for Longhorn
+
* `NFSClientInstalled`: Checks if any of the following NFS clients are supported: `v4.2`, `v4.1`, or `v4.0`. NFS client is required for RWX volume and backup.
+
* `KernelModulesLoaded`: Checks if the following Kernel modules are loaded:
+
** `dm_crypt`: Required for the volume and backing image encryption.  
+
* `HugePagesAvailable`: Indicates whether the node is properly configured with HugePages (2Mi) as required by the Longhorn V2 Data Engine. This includes verifying the following:
+
** HugePages (2Mi) are registered as a Kubernetes resource (`hugepages-2Mi`).
** The configured HugePages capacity meets or exceeds the value defined in the `v2-data-engine-hugepage-limit` setting.

Node conditions do not block the Longhorn deployment but they result in warnings in the Longhorn `Node` resource. For more information, see xref:installation-setup/requirements.adoc#_requirements[Longhorn Installation Requirements].
